--- a/src/Website/templates/regis_investor.html
+++ b/src/Website/templates/regis_investor.html
@@ -26,7 +26,7 @@
                     <td class="info"> Phone number </td>         <td> <input type="text" class="inputBox-regInv" name = "phone_number"> </td>
                 </tr>
                 <tr>
-                    <td class="info"> Gender </td>               <td> <input type="text" class="inputBox-regInv" name = "gender"> </td>
+                    <td class="info"> Sex </td>               <td> <input type="text" class="inputBox-regInv" name = "sex">  </td>
                 </tr>
                 <tr>
                     <td class="info"> Category Preference </td>
