--- a/src/Website/templates/regis_startup.html
+++ b/src/Website/templates/regis_startup.html
@@ -32,7 +32,17 @@
                     <td class="info"> Phone number </td>         <td> <input type="text" class="inputBox-regStart" name="phone_number"> </td>
                 </tr>
                 <tr>
-                    <td class="info"> Gender </td>               <td> <input type="text" class="inputBox-regStart" name="gender"> </td>
+                    <td class="info"> Sex </td>               
+                    <td> 
+                        <label class="container">Man
+                            <input type="radio" checked="checked" name="radio" value="man">
+                            <span class="checkmark"></span>
+                        </label>
+                        <label class="container">Woman
+                            <input type="radio" name="radio" value="woman">
+                            <span class="checkmark"></span>
+                        </label>    
+                    </td>
                 </tr>
                 <tr>
                     <td class="info"> Budget/Investment Needed </td>
@@ -54,7 +64,7 @@
                             <span class="checkmark"></span>
                         </label>
                         <label class="container">No
-                            <input type="radio" checked="checked" name="radio" value="no">
+                            <input type="radio"  name="radio" value="no">
                             <span class="checkmark"></span>
                         </label>
                     </td>
