--- a/src/Website/static/main.css
+++ b/src/Website/static/main.css
@@ -196,9 +196,9 @@
 .rollingbox{
   position: relative;
   width: 100%;
-  height: 50vh;
+  height: 60vh;
 
-  background: #760166;
+  background: #760166;  
 }
 
 .rollingbox h2{
@@ -217,6 +217,52 @@
   color: #FFFFFF;
 }
 
+.flex-box{
+  display: flex;
+  width: 90%;
+  justify-content: space-around;
+  flex: none;
+  flex-direction: row;
+
+  padding-top: 180px;
+  padding-left: 5%;
+}
+
+.flex-boxBG{
+  width: 20%;
+  height: 18vw;
+
+  background-color:#FFFFFF;
+  border-radius: 25px;
+}
+
+.flex-boxBG div{
+  position: relative;
+  width: 100%;
+  height: 9vw;
+
+  border-radius: 25px 25px 0px 0px;
+  background: #24005C;
+}
+ 
+.flex-boxBG h3{
+  position: relative;
+  text-align: center;
+}
+
+.flex-boxBG h4{
+  position: relative;
+  left: 2%;
+}
+
+.flex-boxBG-next{
+  width: 10%;
+  color: #FFFFFF;
+
+  text-align: center;
+  line-height: 18vw;
+  font-size: 8vw;
+}
 .bottom .reginvestor{
   position: absolute;
   width: 721px;
